rust/crates/rax-nmea/src/sentence/snapshots/rax_nmea__sentence__rmc__test__1.snap
---
source: crates/rax-nmea/src/sentence/rmc.rs
expression: rmc
---
{
  "time": "11:01:25",
  "status": "Valid",
  "lat": 55.088959666666675,
  "lon": 38.9775611,
  "spd": 148.8,
  "cog": 84.6,
  "date": "2017-03-31",
  "mv": 8.9,
  "pos_mode": "Differential",
  "nav_status": null
}
