rust/crates/rax-nmea/src/sentence/snapshots/rax_nmea__sentence__rmc__test__2.snap
---
source: crates/rax-nmea/src/sentence/rmc.rs
expression: rmc
---
{
  "time": null,
  "status": "Invalid",
  "lat": null,
  "lon": null,
  "spd": null,
  "cog": null,
  "date": null,
  "mv": null,
  "pos_mode": "NotValid",
  "nav_status": null
}
